crates/solidity-v2/testing/snapshots/diagnostics_output/syntax/unsupported_syntax/generated/slang/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

Error: This syntax was introduced in version '0.8.4'.
   ╭─[input.sol:4:1]
   │
 4 │ error MyError();
   │ ────────┬───────  
   │         ╰───────── Error occurred here.
───╯
